Added answer part 2 day 3

--- a/day 3/solver.ipynb
+++ b/day 3/solver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "198"
+       "3847100"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,19 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(12, 5)\n",
-      "(7, 5)\n",
-      "(4, 5)\n",
-      "(3, 5)\n",
-      "(2, 5)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4105235"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -58,56 +57,34 @@
     "data = np.array(data).astype(int) # rotates the lists by 90 degrees\n",
     "arrays = data.copy()\n",
     "for i in range(arrays.shape[1]):\n",
-    "    print(arrays.shape)\n",
-    "    most_common = np.where(arrays[:,i].mean() > 0.5, 1, 0)\n",
-    "    arrays = arrays[arrays[:,i] == most_common]\n"
+    "    if arrays.shape[0] == 1:\n",
+    "        break\n",
+    "    most_common = np.where(arrays[:,i].mean() >= 0.5, 1, 0)\n",
+    "    arrays = arrays[arrays[:,i] == most_common]\n",
+    "oxygen_generator_rating = int(\"\".join([str(i) for i in arrays[0]]), 2)\n",
+    "arrays2 = data.copy()\n",
+    "for i in range(arrays2.shape[1]):\n",
+    "    if arrays2.shape[0] == 1:\n",
+    "        break\n",
+    "    least_common = np.where(arrays2[:,i].mean() < 0.5, 1, 0)\n",
+    "    arrays2 = arrays2[arrays2[:,i] == least_common]\n",
+    "CO2_scrubber_rating = int(\"\".join([str(i) for i in arrays2[0]]), 2)\n",
+    "oxygen_generator_rating * CO2_scrubber_rating"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 1, 1, 1, 0],\n",
-       "       [1, 0, 1, 1, 0],\n",
-       "       [1, 0, 1, 1, 1],\n",
-       "       [1, 0, 1, 0, 1],\n",
-       "       [1, 1, 1, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 1, 0, 0, 1]])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "array[array[:,0] == 1]\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 1, 1, 0]])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arrays"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
