--- a/day 4/solver.ipynb
+++ b/day 4/solver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "\n",
     "sequence = [int(p) for p in data[0].split(\",\")]\n",
     "boards = []\n",
-    "for i in range(2,len(sequence), 6):\n",
+    "for i in range(2,len(data), 6):\n",
     "    board = [[[int(elem) for elem in row.split(\" \") if elem  != \"\"] for row in data[i:i+5]]]\n",
     "    if len(board[0]) > 0:\n",
     "        boards += board\n",
@@ -22,95 +22,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9864"
+       "87456"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# part 1\n",
-    "bool_boards = np.full((3, 5, 5), False)\n",
+    "bool_boards = np.full(boards.shape, False)\n",
     "for num in sequence:\n",
     "    bool_boards |= (boards == num)\n",
-    "    ax_1, ax_2 = bool_boards.sum(axis=1), bool_boards.sum(axis=2)\n",
-    "    if (5 in ax_1) | (5 in ax_2):\n",
+    "    found_bingo = [(5 in board.sum(axis=0)) | (5 in board.sum(axis=1)) for board in bool_boards]\n",
+    "    if any(found_bingo):\n",
     "        break\n",
-    "num * boards[bool_boards].sum()"
+    "winning_board = np.argmax(found_bingo)\n",
+    "num * boards[winning_board][~bool_boards[winning_board]].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[3, 4, 4, 1, 0],\n",
-       "        [2, 3, 2, 3, 2],\n",
-       "        [5, 1, 1, 2, 3]]),\n",
-       " array([1, 1, 0], dtype=int64))"
+       "15561"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# part 2\n",
-    "ax_2, ax_2.argmax(axis=1)"
+    "bool_boards = np.full(boards.shape, False)\n",
+    "for num in sequence:\n",
+    "    copy_bools = bool_boards.copy()\n",
+    "    bool_boards |= (boards == num)\n",
+    "    found_bingo = [(5 in board.sum(axis=0)) | (5 in board.sum(axis=1)) for board in bool_boards]\n",
+    "    if all(found_bingo):\n",
+    "        last_found_bingo = ([(5 in board.sum(axis=0)) | (5 in board.sum(axis=1)) for board in copy_bools])\n",
+    "        break\n",
+    "lost_board = np.argmin(last_found_bingo)\n",
+    "num * boards[lost_board][~bool_boards[lost_board]].sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_board = np.full((3, 5, 5), True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[5, 5, 5, 5, 5],\n",
-       "        [5, 5, 5, 5, 5],\n",
-       "        [5, 5, 5, 5, 5]]),\n",
-       " array([[5, 5, 5, 5, 5],\n",
-       "        [5, 5, 5, 5, 5],\n",
-       "        [5, 5, 5, 5, 5]]))"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_board.sum(axis=1), test_board.sum(axis=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.4"
   },
   "orig_nbformat": 4
  },
