--- a/day 5/solver.ipynb
+++ b/day 5/solver.ipynb
@@ -2,80 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from itertools import product\n",
     "\n",
     "with open(\"data.txt\", \"r\") as r: \n",
-    "    data = [p for p in r.readlines()]\n",
-    "\n",
-    "sequence = [int(p) for p in data[0].split(\",\")]\n",
-    "boards = []\n",
-    "for i in range(2,len(data), 6):\n",
-    "    board = [[[int(elem) for elem in row.split(\" \") if elem  != \"\"] for row in data[i:i+5]]]\n",
-    "    if len(board[0]) > 0:\n",
-    "        boards += board\n",
-    "boards = np.array(boards)"
+    "    data = [[[int(k) for k in h.split(\",\")] for h in p.split(\" -> \")] for p in r.readlines()]\n",
+    "    data = np.array(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "87456"
+       "3990"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# part 1\n",
-    "bool_boards = np.full(boards.shape, False)\n",
-    "for num in sequence:\n",
-    "    bool_boards |= (boards == num)\n",
-    "    found_bingo = [(5 in board.sum(axis=0)) | (5 in board.sum(axis=1)) for board in bool_boards]\n",
-    "    if any(found_bingo):\n",
-    "        break\n",
-    "winning_board = np.argmax(found_bingo)\n",
-    "num * boards[winning_board][~bool_boards[winning_board]].sum()"
+    "vent_points = []\n",
+    "for point in data:\n",
+    "    if point[0][0] == point[1][0]:\n",
+    "        min_ = min([point[0][1], point[1][1]])\n",
+    "        max_ = max([point[0][1], point[1][1]])\n",
+    "        new_points = [[point[1][0], i] for i in range(min_, max_+1)]\n",
+    "        vent_points += new_points\n",
+    "    elif point[0][1] == point[1][1]:\n",
+    "        min_ = min([point[0][0], point[1][0]])\n",
+    "        max_ = max([point[0][0], point[1][0]])\n",
+    "        new_points = [[i, point[1][1]] for i in range(min_, max_+1)]\n",
+    "        vent_points += new_points\n",
+    "        \n",
+    "counter = {}\n",
+    "for vp in vent_points:\n",
+    "    counter[str(vp)] = counter.get(str(vp), 0) + 1\n",
+    "(np.array(list(counter.values())) > 1).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15561"
+       "21305"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# part 2\n",
-    "bool_boards = np.full(boards.shape, False)\n",
-    "for num in sequence:\n",
-    "    copy_bools = bool_boards.copy()\n",
-    "    bool_boards |= (boards == num)\n",
-    "    found_bingo = [(5 in board.sum(axis=0)) | (5 in board.sum(axis=1)) for board in bool_boards]\n",
-    "    if all(found_bingo):\n",
-    "        last_found_bingo = ([(5 in board.sum(axis=0)) | (5 in board.sum(axis=1)) for board in copy_bools])\n",
-    "        break\n",
-    "lost_board = np.argmin(last_found_bingo)\n",
-    "num * boards[lost_board][~bool_boards[lost_board]].sum()"
+    "vent_points = []\n",
+    "for point in data:\n",
+    "    p1, p2 = point\n",
+    "    x1, y1 = p1\n",
+    "    x2, y2 = p2\n",
+    "    if x1 == x2:\n",
+    "        min_ = min([y1, y2])\n",
+    "        max_ = max([y1, y2])\n",
+    "        new_points = [[x1, i] for i in range(min_, max_+1)]\n",
+    "        vent_points += new_points\n",
+    "    elif y1 == y2:\n",
+    "        min_ = min([x1, x2])\n",
+    "        max_ = max([x1, x2])\n",
+    "        new_points = [[i, y2] for i in range(min_, max_+1)]\n",
+    "        vent_points += new_points\n",
+    "    else:\n",
+    "        if x1 < x2:\n",
+    "            xs = list(range(x1, x2+1))\n",
+    "            xs = list(reversed(xs))\n",
+    "        else:\n",
+    "            xs = list(range(x2, x1+1))\n",
+    "        if y1 < y2: \n",
+    "            ys = list(range(y1, y2+1))\n",
+    "            ys = list(reversed(ys))\n",
+    "        else:\n",
+    "            ys = list(range(y2, y1+1))\n",
+    "        vent_points += list(zip(xs, ys))\n",
+    "mx = np.array(vent_points).max()+1\n",
+    "map = np.zeros((mx, mx))\n",
+    "for p in vent_points:\n",
+    "    map[p[0]][p[1]] += 1\n",
+    "(map > 1).sum()"
    ]
   }
  ],
